load("@fmeum_rules_jni//jni:defs.bzl", "java_native_library")

java_native_library(
    name = "math",
    srcs = [
        "math.c",
    ],
    java_lib = "//tests/native_loader/src/test/java/com/example/math",
    visibility = [
        "//tests/native_loader/src/test/java/com/example/math:__pkg__",
    ],
)
