load("@fmeum_rules_jni//jni:defs.bzl", "cc_jni_library")

cc_jni_library(
    name = "math",
    srcs = [
        "math.c",
    ],
    visibility = [
        "//native_loader/src/test/java/com/example/math:__pkg__",
    ],
    deps = [
        "//native_loader/src/test/java/com/example/math:math.hdrs",
    ],
)
