load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "os_impl",
    testonly = True,
    srcs = ["os.cpp"],
    tags = ["manual"],
    visibility = [
        "//native_loader/src/main/native/com/example/os:__pkg__",
    ],
    deps = [
        "//native_loader/src/main/java/com/example/os:os.hdrs",
    ],
    # Required to keep the symbols for native methods only called from Java.
    alwayslink = True,
)
