# Copyright 2025 Fabian Meumertzheim
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "os_impl",
    testonly = True,
    srcs = ["os.cpp"],
    tags = ["manual"],
    visibility = [
        "//native_loader/src/main/native/com/example/os:__pkg__",
    ],
    deps = [
        "//native_loader/src/main/java/com/example/os:os.hdrs",
    ],
    # Required to keep the symbols for native methods only called from Java.
    alwayslink = True,
)
