cc_library(
    name = "os_impl",
    srcs = ["os.cpp"],
    tags = ["manual"],
    visibility = [
        "//tests/native_loader/src/test/native/com/example/os:__pkg__",
    ],
    deps = [
        "//tests/native_loader/src/test/native/com/example/os:os_headers",
    ],
    # Required to keep the symbols for native methods only called from Java.
    alwayslink = True,
)
